--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,8 +9,9 @@
     --body-margin-top: 40px;
 
     --color-gray: #96B6C5;
-    --color-gray-2: #5b6f78;;
-    
+    --color-gray-2: #5b6f78;
+    ;
+
     --color-border-1: #F5F5F5;
     --scroll-color-active: #aab7b8;
 
@@ -23,30 +24,39 @@ html {
 }
 
 
-.font-poppins{
+.font-poppins {
     font-family: var(--font-poppins);
 }
-.font-poppins-bold{
+
+.font-poppins-bold {
     font-family: var(--font-poppins);
     font-weight: 500;
 }
 
-h1,h2,h3,h4,h5,h6{
-    font-family: var(--font-poppins);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--font-manrope);
 }
-h1{
+
+h1 {
     font-weight: 900;
 }
-h2{
+
+h2 {
     font-weight: 700;
 }
-.margin-top-9rem{
+
+.margin-top-9rem {
     margin-top: 9rem;
 }
 
 body {
     font-family: var(--font-manrope);
-    margin-top: 50px;
+    margin-top: 50px;  
 }
 
 code {
@@ -55,18 +65,24 @@ code {
 
 a {
     font-family: var(--font-manrope) !important;
-    cursor: pointer; 
+    cursor: pointer;
     color: #000;
 }
 
 .pointer {
     cursor: pointer;
 }
-.fixed-top{
-    position: fixed; top: 0px;
+
+.fixed-top {
+    position: fixed;
+    top: 0px;
 }
-.navbar a{
+.nav-link{
+    color: #333;
+    font-size: 0.9rem;
     font-family: var(--font-poppins) !important;
+}
+.navbar a {  
     font-weight: 500;
 }
 
@@ -74,71 +90,114 @@ a {
     transition: opacity 150ms ease-out 0s;
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(4px);
-  }
+}
 
-.contentHeight{ 
+.contentHeight {
     height: 55.5vw !important;
 }
-.priceTableHeight{ 
+
+.priceTableHeight {
     min-height: 39.5vw !important;
 }
 
-.contentWidth{
+.contentWidth {
     margin: 0 auto;
     max-width: 1024px;
 }
 
-.price-list div{
+.price-list div {
     margin-bottom: 0.5rem;
     font-size: 1.1rem;
 }
 
-.border-top-gray{
+.border-top-gray {
     border-top: 10px solid var(--color-gray) !important;
 }
-.border-top-blue{
+
+.border-top-blue {
     border-top: 10px solid #4477CE !important;
 }
 
-.border-top-dark{
+.border-top-dark {
     border-top: 10px solid #000 !important;
 }
 
 
-.text-color-gray{
+.text-color-gray {
     color: var(--color-gray-2);
 }
-.text-color-blue{
+
+.text-color-blue {
     color: #4477CE;
 }
-.text-color-dark{
+
+.text-color-dark {
     color: #000;
 }
 
-.global-height{
+.global-height {
     min-height: 90vh;
 }
 
-.content-md{
-    margin:  0 auto;
+.content-md {
+    margin: 0 auto;
     max-width: 960px;
 }
 
-.content-sm{
-    margin:  0 auto;
+.content-sm {
+    margin: 0 auto;
     max-width: 1024px;
 }
-.mt-xl{
+
+.mt-xl {
     margin-top: 5rem;
 }
+
 .center-line {
     display: flex;
     align-items: center;
     text-align: center;
-  }
-  
-  .line {
+}
+
+.line {
     flex-grow: 1;
     height: 0.5px;
+    background-color: #d7d7d7;
+}
+
+p{
+    line-height: 2rem;
+}
+.list div{
+    display: inline-block;
+    width: auto; 
+    border: 1px solid #f00;
+}
+
+footer a{
+    color: #5b6f78;
+    text-decoration: none;
+}
+
+.mb-6{
+    margin-bottom: 6rem;
+}
+
+#myTab .active{
     background-color: #000;
-  }
+    color: #fff;
+    border-color: #000;
+}
+
+.dtable{ 
+    border-top: 1px solid #d1cfcf;
+   
+}
+.dtable td, .dtable th{
+    border-right: 1px solid #d1cfcf;
+}
+
+.slick-prev:before, .slick-next:before { 
+    color: #000; 
+}
+
