--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49,7 +49,9 @@ h1 {
 h2 {
     font-weight: 700;
 }
-
+p{
+    font-size: 16px;
+}
 .margin-top-9rem {
     margin-top: 9rem;
 }
@@ -58,6 +60,9 @@ body {
     font-family: var(--font-manrope);
     margin-top: 50px;  
 }
+
+
+
 content{
     z-index: 9999;
 }
@@ -151,6 +156,15 @@ a {
     margin: 0 auto;
     max-width: 1024px;
 }
+.content-xs {
+    margin: 0 auto;
+    max-width: 624px;
+}
+.height-100{
+    min-height: 100vh;
+}
+
+
 
 .mt-xl {
     margin-top: 5rem;
@@ -168,9 +182,7 @@ a {
     background-color: #d7d7d7;
 }
 
-p{
-    line-height: 2rem;
-}
+
 .list div{
     display: inline-block;
     width: auto; 
